<resources>
    <string name="app_name">LearnVocabularyApp</string>
    <string name="words_txt">Words</string>
    <string name="learned_txt">Learned</string>
    <string name="recycler_view_txt">RECYCLERVIEW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog">DIALOG</string>
    <string name="english_txt">İngilizce</string>
    <string name="spanish_txt">İspanyolca</string>
    <string name="german_txt">Almanca</string>
    <string name="german_flag">German Flag</string>
    <string name="spain_flag">Spain Flag</string>
    <string name="england_flag">England Flag</string>
    <string name="warning_txt">Kelimenin seçtiğiniz dilde karşılığını görmek için resme dokunun!</string>
    <string name="what_language_do_you_want">Hangi dildeki kelimeleri öğrenmek istersiniz?</string>
    <string name="example_txt">Örnek</string>
    <string name="add_to_learned_txt">Öğrendiklerime Ekle</string>
    <string name="remove_to_learned_txt">Öğrendiklerimden Çıkar</string>
</resources>