<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDetail"
            android:layout_width="175dp"
            android:layout_height="200dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <ImageView
                android:id="@+id/ivDetail"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                tools:background="@drawable/england"
                tools:ignore="contentDescription">

            </ImageView>

            <TextView
                android:id="@+id/tvWordForLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="@string/dialog" />

            <TextView
                android:id="@+id/tvWordForTurkish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone"
                tools:text="@string/dialog" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            tools:text="@string/warning_txt"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="338dp"
            android:text="@string/example_txt" />

        <TextView
            android:id="@+id/tvForSentenceLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="338dp"
            tools:text="Learn Vocabulary App" />

        <TextView
            android:id="@+id/tvForTurkishLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="338dp"
            tools:text="Learn Vocabulary App" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/green"
            android:text="@string/add_to_learned_txt"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>