<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceFragment">

    <TextView
        android:id="@+id/tvWhatLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/what_language_do_you_want"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhatLanguage">


        <LinearLayout
            android:id="@+id/llEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="50dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <ImageView
                    android:id="@+id/ivEngland"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/england"
                    android:contentDescription="England Flag" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_txt"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llSpanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <ImageView
                    android:id="@+id/ivSpain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/spain"
                    android:contentDescription="Spain Flag" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spanish_txt"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
